kolstroy2/css/style.css
@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Thin.woff2') format('woff2'), url('../fonts/Lato-Thin.woff') format('woff');
    font-display: swap;
    font-weight: 100;
    font-style: normal;
}

@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Light.woff2') format('woff2'), url('../fonts/Lato-Light.woff') format('woff');
    font-display: swap;
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Regular.woff2') format('woff2'), url('../fonts/Lato-Regular.woff') format('woff');
    font-display: swap;
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Lato';
    src: url('../fonts/Lato-Bold.woff2') format('woff2'), url('../fonts/Lato-Bold.woff') format('woff');
    font-display: swap;
    font-weight: 700;
    font-style: normal;
}

html {
    scroll-behavior: smooth;
}

* {
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

img {
    max-width: 100%;
}

.list-reset {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.btn-reset {
    padding: 0;
    border: none;
    background-color: transparent;
    cursor: pointer;
}

body {
    overflow-anchor: none;
    margin: 0;
    font-family: 'Fira Sans', sans-serif;
}

.visually-hidden {
    position: absolute !important;
    clip: rect(1px 1px 1px 1px);
    /* IE6, IE7 */
    clip: rect(1px, 1px, 1px, 1px);
    padding: 0 !important;
    border: 0 !important;
    height: 1px !important;
    width: 1px !important;
    overflow: hidden;
}

:root {
    --white-color: #ffffff;
    --accent-color: #ffc652;
    --dark-color: #303030;
}

.container {
    max-width: 1630px;
    padding: 0 15px;
    margin: 0 auto;
}

.title {
    font-weight: 700;
    font-size: 46px;
    color: var(--dark-color);
}

.header {
    /* position: absolute; */
    top: 0px;
    left: 0px;
    width: 100%;
    color: var(--white-color);
    background-color: var(--dark-color);
}

.header__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 30px;
    padding-bottom: 30px;
}

.header__content {
    display: flex;
    align-items: center;
}

.logo {
    font-size: 36px;
    letter-spacing: 2px;
    font-weight: 700;
    font-family: 'Comfortaa', cursive;
}

.header__phone {
    font-size: 18px;
    font-weight: 300;
    letter-spacing: 2px;
    padding-left: 20px;
}

.header__list {
    display: flex;
}

.header__item:not(:last-child) {
    padding-right: 36px;
}

.header__item {
    font-size: 20px;
    font-weight: 400;
}

.header__link,
.logo,
.header__phone,
.footer__phone,
.footer-link {
    transition: all 0.3s;
}

.header__link:hover,
.logo:hover,
.header__phone:hover,
.footer__phone:hover,
.footer-link:hover {
    color: var(--accent-color);
}


.mob-menu {
    display: none;
}
.overlay {
    height: 0%;
    width: 100%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0, 0.9);
    overflow-y: hidden;
    transition: 0.5s;
  }
  
  .overlay-content {
    position: relative;
    top: 25%;
    width: 100%;
    text-align: center;
    margin-top: 30px;
  }
  
  .overlay a {
    padding: 10px;
    text-decoration: none;
    font-size: 36px;
    color: #818181;
    display: block;
    transition: 0.3s;
  }
  
  .overlay a:hover, .overlay a:focus {
    color: var(--accent-color);
  }
  
  .overlay .closebtn {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 60px;
  }
  
  @media screen and (max-height: 450px) {
    .overlay {overflow-y: auto;}
    .overlay a {font-size: 20px}
    .overlay .closebtn {
    font-size: 40px;
    top: 15px;
    right: 35px;
    }
  }


.banner {
    /* background: linear-gradient( 90deg, rgba(255, 175, 70, 0.8) 0%, #ffc552e0 100%), url(../img/bg-main.jpg); */
    background: linear-gradient( 90deg, rgb(35 35 35 / 80%) 0%, #ad7d1fe0 100%), url('../img/bg-main.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 75vh; 
    color: var(--white-color);
}

.banner__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.banner__title {
    font-size: 62px;
    text-transform: uppercase;
    margin: 0 0 10px 0;
    font-weight: 700;
    letter-spacing: 2px;
    color: var(--white-color);
    transition: background-position-x 0.9s linear;
    cursor: default;
}

.banner__title:hover {
    background: url("../img/line.svg");
    -webkit-animation: line 1s;
            animation: line 1s;
}

@-webkit-keyframes line {
    0% {
      background-position-x: 390px;
    }
  }
  
  @keyframes line {
    0% {
      background-position-x: 390px;
    }
  }

.banner__descr {
    font-size: 32px;
    font-weight: 300;
    letter-spacing: 1px;
    text-align: center;
}

.advantages {
    padding: 63px 0 224px;
    text-align: center;
}

.advantages__container {
    display: flex;
    flex-direction: column;
}

.advantages__title {
    margin-bottom: 62px;
}

.advantages__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.advantages__card {
    position: relative;
}

.advantages__card img {
    border-radius: 8px;
    overflow: hidden;
}

.advantages__text {
    background-color: #fff;
    max-width: 293px;
    min-height: 262px;
    margin: 0 auto;
    border-radius: 8px;
    padding: 30px;
    top: 60%;
    left: 8%;
    position: absolute;
    box-shadow: 0px 1px 15px rgb(0 0 0 / 25%);
    transition: box-shadow 0.4s;
}

.advantages__text:hover {
    box-shadow: rgb(0 0 0 / 35%) 4px 4px 15px 2px;
}

.advantages__card-title {
    font-size: 22px;
    font-weight: 500;
    /* color: rgba(255, 175, 70); */
    color: var(--accent-color);
}

.advantages__card-descr {
    font-weight: 400;
    color: var(--dark-color);
}
/* ... */

